--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "atropos": "^2.0.2",
     "axios": "^0.27.2",
+    "bootstrap-icons": "^1.11.0",
     "framer-motion": "^6.4.3",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.3.0",
+    "redux": "^4.2.1",
     "sass": "^1.53.0"
   },
   "devDependencies": {
