--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "atropos": "^2.0.2",
     "axios": "^0.27.2",
     "bootstrap-icons": "^1.11.0",
+    "classnames": "^2.3.2",
     "framer-motion": "^6.4.3",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
